resources/css/style.css
#To implement
/*----------------------------------------*/
/*             BASIC SETUP                */
/*----------------------------------------*/
* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html,
body{
    background-color: #fff;
    color: #404040;
/*For any case*/
    font-family: 'Lato', 'Arial', sans-serif;
    font-size: 20px;
    font-weight: 300;
    
/*Render fonts*/
    text-rendering: optimizeLegibility;
    overflow-x:hidden;
}

.clearfix{
    overflow: auto;
    clear:both;
}

/*----------------------------------------*/
/*          REUSABLE COMPONENTS           */
/*----------------------------------------*/

h1, 
h2,
h3{
    word-spacing: 3px;
}

h1{
    margin-top: 0;
    letter-spacing: 1px; 
}

h2 {
    text-align: center;
    font-weight: bold;
    font-size: 200%;
    margin-bottom: 30px;
    letter-spacing: 1px;
}

h3{
    word-spacing: 2px;
}

h2:after {
    display: block;
    height: 2px;
    /*Intensified color for contrast purposes*/
    background-color: rgb(255, 138, 0);
    /*You must specify blank content if you will create a after property*/
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 30px;
}

.row {
    max-width: 1140px;
    margin-right: auto;
    margin-left: auto;
}


section{
    padding: 50px 0;
}



/*----------------------------------------*/
/*                ICONS                   */
/*----------------------------------------*/

.icon{
    font-size: 40px;
    /*color: rgb(255, 138, 0);*/
}

/*----------------------------------------*/
/*              NAV HEADER                */
/*----------------------------------------*/

.nav-link-header li,
.nav-link-header a
{
    color: #ffff;
    display: inline-block;
}

.nav-link-header li {
    overflow: hidden;
    font-family: "Lato", sans-serif;
    font-size: 130%;
    margin: 20px 40px 0 40px;
}


.nav-link-header li:last-child {
    margin-right: 0;
}

.nav-link-header li a {
    color: #fff;
    padding: 14px 16px;
    text-decoration: none;
    
}

.nav-link-header ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  text-align: right;
}



.nav-link-header li a:link,
.nav-link-header li a:visited
{
    padding: 0 10px 10px 10px;
    border-bottom: 2px solid transparent;
    -webkit-transition: border-bottom 0.3s;
    transition: border-bottom 0.3s;
}

.nav-link-header li a:hover,
.nav-link-header li a:active,
.nav-link-header li a:focus
{
    border-bottom: 2px solid rgb(255, 138, 0);
}


/*----------------------------------------*/
/*              MAIN PAGE                 */
/*----------------------------------------*/


header {
    background-image: url(../css/img/background-header-img.jpg);
/*    background: linear-gradient(135deg, rgba(85,239,203,1) 0%,rgba(30,87,153,1) 0%,rgba(85,239,203,1) 0%,rgba(91,202,255,1) 100%);*/
    background-size: cover;
    background-position: center;
/*view 100% of view port (page)*/
    height: 100vh;
    
}

.hero-title {
    position: absolute;
    width: 1140px;
    top: 45%;
    left: 50%;
/* set position as you probably want to */
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}


.welcome-title {
    font-size: 175%;
    margin-left: -1%;
}

.title-intense-color {
    color: rgb(255, 154, 35);
    font-weight: bold;
}

.main-name {
    color: rgb(232, 232, 232);
    font-size: 550%;
    margin-bottom: 1%;
    font-weight: 500;
    margin-bottom: 1%;
    margin-left: 12%;
}

.role-name {
    color: rgba(62, 48, 234, 0.75);
    font-size: 250%;
    letter-spacing: 1px;
    font-weight: 500;
    word-spacing: 5px;
    text-align: center;
    margin: 0;
}


.resume-buttons {
    text-align: center;
    letter-spacing: 5px;
    padding: 0 240px;
}

.resume-buttons ul {
    margin-top: 50px;
    padding-left: 0;
    padding-top: 5px;
    border: 1px solid #fff;
}

.bar-separator {
    margin: 0;
    color: #fff;
    padding: 30px;
    display: inline-block;
    height: 35px;
    font-weight: bold;
}

.resume-buttons li {
    display: inline-block;
    padding: 15px 20px 10px 20px;
    text-align: center;
    overflow:hidden;
}

.resume-buttons li a{
    text-decoration: none;
    text-transform: uppercase;
    color: #ffff;
}

/*Check this magic trick dude, holy moly */
/*.resume-buttons li + li:before{
    display: block;
    content: " Something ";
}*/

.resume-buttons li a:link,
.resume-buttons li a:visited
{
    display: block;
    padding: 0 10px 10px 10px;
    border-bottom: 2px solid transparent;
    -webkit-transition: border-bottom 0.3s;
    transition: border-bottom 0.3s;
}

.resume-buttons li a:hover,
.resume-buttons li a:active,
.resume-buttons li a:focus
{
    border-bottom: 2px solid #fff;
}

/*----------------------------------------*/
/*              ABOUT SECTION             */
/*----------------------------------------*/



.about-pic {
    float:left;
    width: 25%;
    padding: 10% 5% 10% 0;
    /*Cool style bc of weird transformation. Seems legit :) */
    border-radius: 40%;
}

.long-description {
    padding-top: 2%;
    float:right;
    width: 70%;
    line-height: 25px;
    display:block;
    
}

/*----------------------------------------*/
/*              SKILL SECTION             */
/*----------------------------------------*/




.section-skill {
    background-color: rgb(245, 245, 220);
    /*background-color: rgb(100, 235, 235);*/
}

.skill-title {
    color: rgb(255, 138, 0);
}

/*----------------------------------------*/
/*               FAQ SECTION              */
/*----------------------------------------*/

.section-faq {
    
}

.faq-question {
 font-weight: bold;   
}

.faq-answer {
    
}

.intense {
    font-weight: bold;
    color: rgb(255, 138, 0);
}

/*----------------------------------------*/
/*           CONTACT SECTION              */
/*----------------------------------------*/

.section-contact{
    background-color: #f4f4f4;
}

.contact-form{
    width: 60%;
    margin: 30px auto;
}

input[type=text],
input[type=email],
textarea{
    width: 100%;
    padding: 7px;
    border-radius: 5px;
    border: 1px solid #ccc;
}

.contact-form textarea{
    height: 120px;
}

.contact-form { 
    padding: 50px 0;
}

.contact-form .row + .row:before{
    content: "";
    padding: 15px 20px;
}

.btn-submit{
    color: rgb(255, 154, 35);
    border-color:rgb(255, 154, 35);
    text-transform: uppercase;
    display: block;
    padding: 20px 120px;
    margin: auto;
    text-decoration: none;
    border-radius: 200px;
    -webkit-transition: background-color 0.4s, border 0.4s, color 0.4s;
    transition: background-color 0.4s, border 0.4s, color 0.4s;
    float: right;
}

.btn-submit:hover,
.btn-submit:active,
.btn-submit:focus{
    background-color: rgb(255, 154, 35);
    color: #fff;
}

/*----------------------------------------*/
/*            FOOTER SECTION              */
/*----------------------------------------*/

.section-footer {
    background-color: rgb(11, 14, 16);
    list-style: none;
}

.footer-nav li,
.footer-nav li a,
.social-nav li,
.social-nav li a,
.section-footer .icon
{
    color: #ffff;
    display: inline-block;
    margin-right: 25px;
}

.footer-nav li:last-child,
.social-nav li:last-child {
    margin-right: 0;
}

.footer-nav li a:link,
.footer-nav li a:visited,
.social-link li a:link,
.social-link li a:visited {
    text-decoration: none;
    border: 0;
}

.footer-nav {
    padding-left: 0;
    float:left;
}

.social-nav {
    float:right;
    padding-right: 25%;
}

.section-footer .icon{
    -webkit-transition: color 0.2s;
    transition: color 0.2s;
}

.ion-logo-linkedin:hover,
.ion-logo-linkedin:active,
.ion-logo-linkedin:focus
{
    color: #007bb5;
}

.ion-logo-github:hover,
.ion-logo-github:active,
.ion-logo-github:focus{
    color: #6b6b6c;
}

.footer-nav li a:hover,
.footer-nav li a:active,
.footer-nav li a:focus{
    color: #8b8282;
}

.footer-nav li a {
    -webkit-transition: color 0.2s;
    transition: color 0.2s;
}
.social-media-text {
    margin: 0 auto;
    text-align: right;
    color: #9d8f76;
}

.goodbye-text {
    text-align: center;
    color: #96a2b2;
    margin: 0 0 10px 0;
    padding-bottom: 15px;
}

